# neuron-fsm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/actions/cmake-build/: action.yml
.github/actions/cmake-gen/: action.yml
.github/actions/ctest-run/: action.yml
.github/workflows/: build_and_test.yml  linux_builds.yml  macos_builds.yml  runner.yml  static_checks.yml  windows_builds.yml
include/neuron_fsm/: errors.h  fsm.h  macros.h  state.h
src/: fsm.cpp  state.cpp
tests/: CMakeLists.txt  test_fsm.cpp  test_state.cpp
